# leasecheck

./: .gitignore  CLAUDE.md  README.md
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 674b237a9014_enable_pgvector_extension.py  710912a2a24c_create_findings_table.py  deab13ec70c5_create_rules_table.py  e2d55a7263fe_create_documents_and_clauses.py
backend/app/: config.py  db.py  embeddings.py  ingest.py  main.py  models.py  retrieval.py  review.py
backend/eval/: run_eval.py  sample_lease_answer_key.json
backend/eval/results/: 2026-07-22T04-17-09Z.json  2026-07-22T04-23-31Z-aggregate.json  2026-07-22T04-23-31Z-run1.json  2026-07-22T04-23-31Z-run2.json  2026-07-22T04-23-31Z-run3.json  2026-07-22T04-29-00Z-aggregate.json  2026-07-22T04-29-00Z-run1.json  2026-07-22T04-29-00Z-run2.json  2026-07-22T04-29-00Z-run3.json  2026-07-22T04-31-39Z-aggregate.json  2026-07-22T04-31-39Z-run1.json  2026-07-22T04-31-39Z-run2.json  2026-07-22T04-31-39Z-run3.json  2026-07-22T04-34-13Z-aggregate.json  2026-07-22T04-34-13Z-run1.json  2026-07-22T04-34-13Z-run2.json  2026-07-22T04-34-13Z-run3.json
backend/scripts/: seed_rules.py
frontend/: package-lock.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/documents/[id]/: ReviewDocument.tsx  document.module.css  error.tsx  loading.tsx  page.tsx
frontend/lib/: api.ts
infra/: docker-compose.yml
